fix: youtube player 및 전체적인 디자인 수정

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/bdu6abt.css" />
   </head>
   <body>
     <app-root></app-root>
