chore: fix env variable key value, add meta image

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>DJ블랙버니와 함께 시작하는 2023년!</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta content="assets/og-image-bunny" property="og:image" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
