fix: minor fixes

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DJ블랙버니와 함께 시작하는 2023년!</title>
     <base href="/" />
+
+    <title>DJ블랙버니와 함께 시작하는 2023년!</title>
+    <meta name="title" content="DJ블랙버니와 함께 시작하는 2023년!" />
+    <meta
+      name="description"
+      content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="DJ블랙버니와 함께 시작하는 2023년!" />
+    <meta
+      property="og:description"
+      content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
+    />
+    <meta property="og:image" content="assets/og-image-bunny.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="DJ블랙버니와 함께 시작하는 2023년!"
+    />
+    <meta
+      property="twitter:description"
+      content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
+    />
+    <meta property="twitter:image" content="assets/og-image-bunny.jpeg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta content="assets/og-image-bunny" property="og:image" />
+    <meta content="assets/og-image-bunny.jpeg" property="og:image" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
