--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-
+    <!-- Primary Meta Tags -->
     <title>DJ블랙버니와 함께 시작하는 2023년!</title>
     <meta name="title" content="DJ블랙버니와 함께 시작하는 2023년!" />
     <meta
@@ -13,7 +13,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://dj-blackbunny.netlify.app/" />
     <meta property="og:title" content="DJ블랙버니와 함께 시작하는 2023년!" />
     <meta
       property="og:description"
@@ -23,7 +23,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://dj-blackbunny.netlify.app/" />
     <meta
       property="twitter:title"
       content="DJ블랙버니와 함께 시작하는 2023년!"
