fix: change twitter og image to dynamic link

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,10 @@
       property="twitter:description"
       content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
     />
-    <meta property="twitter:image" content="assets/og-image-bunny.jpeg" />
+    <meta
+      property="twitter:image"
+      content="https://lh3.googleusercontent.com/pw/AL9nZEUev4YZcztL69NryyhcB5_bLfP85I09Nt6iv0WqVs8aIujvN6Bnm0e7ACgrLKGlEQxpiX2pE5VtuYWZiBM07Wl0w1ebXvK37Hs6i_Or31SLrnxRGk_RzIHfhL9Hlwk_GjOmY_-vHyvi2ewiF6sUNBM=w1200-h630"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="assets/og-image-bunny.jpeg" property="og:image" />
