--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8" />
     <base href="/" />
     <!-- Primary Meta Tags -->
-    <title>DJ블랙버니와 함께 시작하는 2023년!</title>
-    <meta name="title" content="DJ블랙버니와 함께 시작하는 2023년!" />
+    <title>
+      DJ블랙버니가 선물하는 새해 첫곡과 함께 2023년 시작해보세요 🐰🖤
+    </title>
+    <meta
+      name="title"
+      content="DJ블랙버니가 선물하는 새해 첫곡과 함께 2023년 시작해보세요 🐰🖤"
+    />
     <meta
       name="description"
       content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
@@ -14,7 +19,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dj-blackbunny.netlify.app/" />
-    <meta property="og:title" content="DJ블랙버니와 함께 시작하는 2023년!" />
+    <meta
+      property="og:title"
+      content="DJ블랙버니가 선물하는 새해 첫곡과 함께 2023년 시작해보세요 🐰🖤"
+    />
     <meta
       property="og:description"
       content="DJ블랙버니가 추천하는 새해에 듣기 좋은 음악, 편지와 함께 선물해보세요!"
@@ -26,7 +34,7 @@
     <meta property="twitter:url" content="https://dj-blackbunny.netlify.app/" />
     <meta
       property="twitter:title"
-      content="DJ블랙버니와 함께 시작하는 2023년!"
+      content="DJ블랙버니가 선물하는 새해 첫곡과 함께 2023년 시작해보세요 🐰🖤"
     />
     <meta
       property="twitter:description"
